--- a/index.html
+++ b/index.html
@@ -1,45 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Wood Store</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Wood Carpenter India</title>
+<link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
+<header>
+    <div class="logo">WoodCraft</div>
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Projects</a>
+        <a href="#">Contact</a>
+    </nav>
+</header>
+
 <section class="hero">
-  <div class="left">
-    <h1>Wood Carpenter’s<br>In India</h1>
-    <p>Premium handmade furniture & interior work</p>
-
-    <div class="stats">
-      <div><b>12+</b><span>Years</span></div>
-      <div><b>38+</b><span>Team</span></div>
-      <div><b>250+</b><span>Projects</span></div>
+    <div class="hero-text">
+        <h1>Premium Wood Carpenter In India</h1>
+        <p>Luxury handmade furniture & interior solutions</p>
+        <a href="#" class="btn">Get Free Quote</a>
     </div>
-  </div>
-
-  <div class="right">
-    <img src="images/craftsman.jpg">
-  </div>
 </section>
 
 <section class="about">
-  <div class="images">
-    <img src="images/about1.jpg">
-    <img src="images/about2.jpg">
-    <img src="images/about3.jpg">
-  </div>
+    <div class="about-images">
+        <img src="images/about1.jpg">
+        <img src="images/about2.jpg">
+        <img src="images/about3.jpg">
+    </div>
 
-  <div class="text">
-    <h2>Wood Whisperer<br>The Real Craft</h2>
-    <p>
-      We create custom wooden furniture with traditional skills
-      and modern finishing.
-    </p>
-  </div>
+    <div class="about-text">
+        <h2>Wood Whisperer – The Real Craft</h2>
+        <p>
+            We create custom wooden furniture using traditional craftsmanship
+            combined with modern finishing techniques.
+        </p>
+    </div>
 </section>
+
+<section class="projects">
+    <h2>Our Featured Work</h2>
+    <div class="project-grid">
+        <img src="images/craftsman.jpg">
+        <img src="images/about1.jpg">
+        <img src="images/about2.jpg">
+    </div>
+</section>
+
+<footer>
+    <p>© 2026 WoodCraft India | All Rights Reserved</p>
+</footer>
 
 </body>
 </html>
